Upgrade to java 11 (#47)
* Upgrade to java 11

* Remove mentions of Java 8 [skip ci]